implement summary table per hit in blast panel implement prevent unselected items in track selector from toggling upon slider blast filter slider change.

--- a/plugins/GalaxyBlaster/css/main.css
+++ b/plugins/GalaxyBlaster/css/main.css
@@ -98,8 +98,19 @@ img.cogwheel {
 
 #xxblastPanel .flapLabel {
     position: relative;
-    top: -25px;    
+    top: -25px;
 }
 
 
-
+.blastSummary {
+    float:right;
+    width:320px;
+    position:relative;
+    top:-30px;
+    border-width:0px;
+}
+div.blastSummary td.blastSummaryItem {
+    width:80px;
+    background-color: #ccc;
+    border-width:0px;
+}
