--- a/plugins/JBlast/css/main.css
+++ b/plugins/JBlast/css/main.css
@@ -154,12 +154,27 @@ div.blastSummary td.blastSummaryItem {
             padding:10px;
             white-space:nowrap;
         }
-        .extruder.right div.flap {
+        .xxextruder.right div.flap {
             left: -29px;
+        }
+        xxspan.flapLabel {
+            left: -7px;
+        }
+        
+        #xx_j-hist-grid {
+            position: absolute;
+            background-color:#eee;
+            overflow:auto;
+            width: 100%;
+            height:100%;
+        }
+        .xx_extruder.right div.flap {
+            left: -38px;
         }
         span.flapLabel {
             left: -7px;
         }
+        
         // table
         .tg  {border-collapse:collapse;border-spacing:0;}
         .tg td{font-family:Arial, sans-serif;font-size:14px;padding:0px 0px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
