--- a/plugins/JBlast/css/main.css
+++ b/plugins/JBlast/css/main.css
@@ -133,7 +133,12 @@ div.blastSummary td.blastSummaryItem {
     background-color: #ccc;
     border-width:0px;
 }
-
+/*
+    featureDetail dialog
+*/
+#blastHspBlock {
+    padding-left:20px;
+}
 
 /*
     history panel
