--- a/plugins/JBlast/css/main.css
+++ b/plugins/JBlast/css/main.css
@@ -102,7 +102,8 @@ div.blast-slider-item-data {
     padding-left: 13px;
     padding-bottom: 25px;
 }
-.blast-table-view {
+.blast-table-view .blast-value, .blast-table-view .blast-field{
+   text-align: center;
 }
 .blast-bp-view {
     margin-top: 20px;
@@ -137,7 +138,7 @@ div.blastSummary td.blastSummaryItem {
     featureDetail dialog
 */
 #blastHspBlock {
-    padding-left:20px;
+    padding-left:5px;
 }
 .detail .blast-table-view .field {
     display:table-cell;
