--- a/plugins/JBlast/css/main.css
+++ b/plugins/JBlast/css/main.css
@@ -49,17 +49,19 @@ img.cogwheel {
     padding:25px;
 }
 .blast-slider-title {
-    height: 50px;
+    height: auto;
     padding: 5px;
+    padding-top: 0px;
 }
 .blast-slider-label {
+    position: absolute;
     font-weight: bolder;
     font-size: larger;
-    position: relative;
-    top: 0px;
-    left: 10px;
+    top: -5px;
+    left: 20px;
 }
 td.blast-slider-item {
+    position:relative;
     height: 60px;
     padding: 20px;
 }
