--- a/plugins/JBClient/css/main.css
+++ b/plugins/JBClient/css/main.css
@@ -26,3 +26,22 @@ and open the template in the editor.
 .jb-menuitem {
     padding-left: 10px;
 }
+.jb-user-icon {
+    background-image: url("../img/user1.png");
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
+    background-position: 2px;
+}
+.jb-login-icon {
+    background-image: url("../img/login.png");
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
+    background-position: 2px;
+}
+.jb-form-button {
+    margin-top: 5px;
+    margin-right: 5px;
+}
+.jb-login-panel {
+     width: 300px;
+}
