--- a/plugins/JBlast/css/main.css
+++ b/plugins/JBlast/css/main.css
@@ -103,7 +103,8 @@ div.blast-slider-item-data {
     padding-bottom: 25px;
 }
 
-// blast detail view
+/* blast detail view
+*/
 #blastDialogDetail {
 
 }
