--- a/plugins/JBlast/css/main.css
+++ b/plugins/JBlast/css/main.css
@@ -205,3 +205,25 @@ div.blastSummary td.blastSummaryItem {
         .tg  {border-collapse:collapse;border-spacing:0;}
         .tg td{font-family:Arial, sans-serif;font-size:14px;padding:0px 0px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
         .tg .tg-yw4l{vertical-align:top}
+
+
+td.state {
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 20px 20px;
+
+}
+
+td[questate*='complete'] {
+    background-image: url("../img/st_complete.png");
+}
+td[questate*='failed'] {
+    background-image: url("../img/st_failed.png");
+}
+td[questate*='active'] {
+    background-image: url("../img/st_active.gif");
+}
+td[questate*='unknown'] {
+    background-image: url("../img/st_unknown.png");
+}
+        
