--- a/plugins/JBlast/css/main.css
+++ b/plugins/JBlast/css/main.css
@@ -8,7 +8,16 @@
 
 div.flapEx {
     padding-top:35px !important;
+    background-repeat: no-repeat !important;
+    background-position: center center !important;
+    background-size: 30px 30px !important;
+    background-image: url("../img/stack200w.png") !important;
+    top:55px !important;
 }
+div.ext_wrapper div.cogwheel {
+    background-image: url("../img/st_active.gif") !important;
+}
+
 div.hidden {
     display:none;
 }
@@ -18,6 +27,10 @@ img.cogwheel {
     left: 5px;
     width: 22px;
     height: 22px;
+}
+/* hide title text of job panel - hack */
+div#extruderRight object.flip_label {
+	display:none;
 }
 
 .blastQtip {
@@ -166,7 +179,8 @@ div.blastSummary td.blastSummaryItem {
         #j-hist-grid {
             position: absolute;
             background-color:#eee;
-            overflow:auto;
+            overflow-y:auto;
+            overflow-x:hidden
             width: 300px;
             height:500px;
         }
