implement hide/show of toolbar blast button.  shows after highlight select.  hides when highlight button toggled off.

--- a/plugins/JBlast/css/main.css
+++ b/plugins/JBlast/css/main.css
@@ -5,7 +5,16 @@
 
 @import url("CSSTableGenerator.css");
 
+/* toolbar blast button */
 
+#jblast-toolbtn {
+    height:17px;
+}
+[widgetid='jblast-toolbtn'] {  
+	display: none;      /* default state */
+}
+
+/* job queue panel */
 div.flapEx {
     padding-top:35px !important;
     background-repeat: no-repeat !important;
