implement tabbed blast filter in sidebar #110

--- a/plugins/JBlast/css/main.css
+++ b/plugins/JBlast/css/main.css
@@ -153,3 +153,11 @@ div.blastSummary td.blastSummaryItem {
     border-spacing: 2px;
 }
        
+
+/*
+   hierarchicalTrackPane panel 
+*/
+
+div#hierarchicalTrackPane > div.header {
+    display: none;
+}
